# autokalshi-v2

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
autokalshi/: __init__.py  types.py
autokalshi/api/: __init__.py
autokalshi/cli/: __init__.py
autokalshi/data/: __init__.py
autokalshi/engine/: __init__.py
autokalshi/ledger/: __init__.py
autokalshi/strategy/: __init__.py
migrations/: 0001_initial.sql
scripts/: dev-setup.sh
tests/: test_migrations.py  test_types.py
