[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autokalshi"
version = "0.1.0"
description = "AutoKalshi v2 — typed prediction-market trading platform"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "alekh"}]
dependencies = [
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["autokalshi*"]
exclude = ["tests*", "strategies*", "migrations*", "alembic*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["autokalshi"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
